--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.9",
-    "react-redux": "^7.2.2"
+    "mongoose": "^5.11.9"
   }
 }
